Per #2550 by @tkrasav

--- a/coincide-index_method.tex
+++ b/coincide-index_method.tex
@@ -68,7 +68,7 @@ I(\mathcal{P}_1, \mathcal{P}_2) =
 {\mathbf X} = \left[ {\begin{array}{*{20}c}
    {X_1 } & {X_2 } &  \cdots  & {X_{L/m} }  \\
    {Y_1 } & {Y_2 } &  \cdots  & {Y_{L/m} }  \\
-    \vdots  &  \vdots  &  \vdots  &  \vdots   \\
+    \vdots  &  \vdots  &  \ddots  &  \vdots   \\
    {Z_1 } & {Z_2 } &  \cdots  & {Z_{L/m} }  \\
 \end{array}} \right].
 \]
