--- a/foreword.tex
+++ b/foreword.tex
@@ -67,7 +67,7 @@
 	\item[] Сергей Кошечкин\begin{tiny} (201-213 гр.)\end{tiny}
 	\item[] Александр Кравцов\begin{tiny} (201-116 гр.)\end{tiny}
 	\item[] Анастасия Красавина\begin{tiny} (201-217 гр.)\end{tiny}
-	\item[] Татьяна Красавина\begin{tiny} (201-214 гр.)\end{tiny}
+	\item[] Татьяна Красавина\begin{tiny} (201-214 гр.)\end{tiny} %tkrasav
 	\item[] Виталий Крепак\begin{tiny} (201-013 гр.)\end{tiny}
 	\item[] Егор Кривов\begin{tiny} (201-211 гр.)\end{tiny}
 	\item[] Александр Кротов\begin{tiny} (201-011 гр.)\end{tiny}
