Per #2678 by @g-n-ev

--- a/foreword.tex
+++ b/foreword.tex
@@ -39,7 +39,7 @@
 	\item[] Андрей Горбунов\begin{tiny} (201-116 гр.)\end{tiny} %goriand
 	\item[] Елена Гундрова\begin{tiny} (201-214 гр.)\end{tiny}
 	\item[] Алексей Гусаров\begin{tiny} (201-216 гр.)\end{tiny}
-	\item[] Наталья Гусева\begin{tiny} (201-216 гр.)\end{tiny}
+	\item[] Наталья Гусева\begin{tiny} (201-216 гр.)\end{tiny} %g-n-ev
 
 	\item[] Андрей Диденко\begin{tiny} (201-311 гр.)\end{tiny} %DidenkoAndre
 	\item[] Олег Дробот\begin{tiny} (201-317 гр.)\end{tiny} %tobord
