--- a/foreword.tex
+++ b/foreword.tex
@@ -108,7 +108,7 @@
 	\item[] Андрей Пунь\begin{tiny} (201-013 гр.)\end{tiny}
 
 	\item[] Артём Рудой\begin{tiny} (201-211 гр.)\end{tiny}
-	\item[] Сергей Рудаков\begin{tiny} (201-219 гр.)\end{tiny}
+	\item[] Сергей Рудаков\begin{tiny} (201-219 гр.)\end{tiny} %Shytnichok
 
 	\item[] Вадим Сафронов\begin{tiny} (201-112 гр.)\end{tiny}
 	\item[] Евгения Сахно\begin{tiny} (201-317 гр.)\end{tiny} %EvgenyaSakhno
