Add @oledzzka nickname to foreword

--- a/foreword.tex
+++ b/foreword.tex
@@ -23,7 +23,7 @@
 	\item[] Анастасия Бодрова\begin{tiny} (201-218 гр.)\end{tiny}
 	\item[] Дмитрий Бородий\begin{tiny} (201-112 гр.)\end{tiny}
 	\item[] Евгений Брицын\begin{tiny} (201-312 гр.)\end{tiny} %ebritsyn
-	\item[] Олег Бусловский\begin{tiny} (201-219 гр.)\end{tiny}
+	\item[] Олег Бусловский\begin{tiny} (201-219 гр.)\end{tiny} %oledzzka
 
 	\item[] Вадим Варнавский\begin{tiny} (201-213 гр.)\end{tiny}
 	\item[] Илья Васильев\begin{tiny} (201-217 гр.)\end{tiny}
