Per #2998 by @oledzzka

--- a/rsa.tex
+++ b/rsa.tex
@@ -104,7 +104,7 @@
         \[ s = m^{d} \mod n \]
         на своём закрытом ключе $\SK$.
     \item $A$ посылает $B$ сообщение в виде $(m, s)$, где $m$ -- открытый текст, $s$ -- подпись.
-    \item $B$ принимает сообщение $(m, s)$, возводит $s$ в степень $e$ по модулю $n$ ($e, n$ -- часть открытого ключа). В результате вычислений $B$ получает открытый текст
+    \item $B$ принимает сообщение $(m, s)$, возводит $s$ в степень $e$ по модулю $n$ ($e, n$ -- часть открытого ключа). В результате вычислений $B$ получает открытый текст:
         \[ s^{e} \mod n = \left( m^{d} \mod n \right)^{e} \mod n = m. \]
     \item $B$ cравнивает полученное значение с первой частью сообщения. При полном совпадении подпись принимается.
 \end{enumerate}
