Per #3133 by @tuchart

--- a/foreword.tex
+++ b/foreword.tex
@@ -125,8 +125,9 @@
 
 	\item[] Буй Зуи Тан\begin{tiny} (201-112 гр.)\end{tiny}
 	\item[] Михаил Тверье\begin{tiny} (201-313 гр.)\end{tiny} %MishaTvr
-	\item[] Татьяна Тюпина\begin{tiny} (201-116 гр.)\end{tiny}
 	\item[] Тимофей Тормагов\begin{tiny} (201-316 гр.)\end{tiny} %tormagov
+	\item[] Артём Тучин\begin{tiny} (201-217 гр.)\end{tiny} %tuchart
+	\item[] Татьяна Тюпина\begin{tiny} (201-116 гр.)\end{tiny}
 
 	\item[] Сергей Угрюмов\begin{tiny} (201-119 гр.)\end{tiny}
 	\item[] Илья Улитин\begin{tiny} (201-417 гр.)\end{tiny}
