Per #3465 by @katala777

--- a/foreword.tex
+++ b/foreword.tex
@@ -83,7 +83,7 @@
 	\item[] Артемий Лузянин\begin{tiny} (201-312 гр.)\end{tiny} %artemluzyanin
 
 	\item[] Егор Макарычев\begin{tiny} (201-115 гр.)\end{tiny}
-	\item[] Иван Макеев\begin{tiny} (201-212 гр.)\end{tiny}
+	\item[] Иван Макеев\begin{tiny} (201-212 гр.)\end{tiny} %katala777
 	\item[] Ольга Малюгина\begin{tiny} (201-111 гр.)\end{tiny}
 	\item[] Алексей Мамаков\begin{tiny} (201-113 гр.)\end{tiny} %AlekseyMamakov
 	\item[] Роман Маракулин\begin{tiny} (201-211 гр.)\end{tiny}
