Per #3766 by @AnastasiaBodrova

--- a/foreword.tex
+++ b/foreword.tex
@@ -20,7 +20,7 @@
 	\item[] Дмитрий Банков\begin{tiny} (201-011 гр.)\end{tiny}
 	\item[] Александр Белов\begin{tiny} (201-214 гр.)\end{tiny}
 	\item[] Даниил Бершацкий\begin{tiny} (201-012 гр.)\end{tiny}
-	\item[] Анастасия Бодрова\begin{tiny} (201-218 гр.)\end{tiny}
+	\item[] Анастасия Бодрова\begin{tiny} (201-218 гр.)\end{tiny} %AnastasiaBodrova
 	\item[] Дмитрий Бородий\begin{tiny} (201-112 гр.)\end{tiny}
 	\item[] Евгений Брицын\begin{tiny} (201-312 гр.)\end{tiny} %ebritsyn
 	\item[] Олег Бусловский\begin{tiny} (201-219 гр.)\end{tiny} %oledzzka
