Per #3802 by @ncos

--- a/foreword.tex
+++ b/foreword.tex
@@ -93,7 +93,7 @@
 	\item[] Даниил Меркулов\begin{tiny} (201-111 гр.)\end{tiny}
 	\item[] Олег Милосердов\begin{tiny} (201-016 гр.)\end{tiny}
 	\item[] Дао Куанг Минь\begin{tiny} (201-116 гр.)\end{tiny}
-	\item[] Антон Митрохин\begin{tiny} (201-216 гр.)\end{tiny}
+	\item[] Антон Митрохин\begin{tiny} (201-216 гр.)\end{tiny} %ncos
 	\item[] Надежда Мозолина\begin{tiny} (201-119 гр.)\end{tiny}
 
 	\item[] Хыу Чунг Нгуен\begin{tiny} (201-015 гр.)\end{tiny} %huutrung
