Add @artemrudoj nickname to foreword

--- a/foreword.tex
+++ b/foreword.tex
@@ -107,7 +107,7 @@
 	\item[] Роман Проскин\begin{tiny} (201-316 гр.)\end{tiny} %opomuc
 	\item[] Андрей Пунь\begin{tiny} (201-013 гр.)\end{tiny}
 
-	\item[] Артём Рудой\begin{tiny} (201-211 гр.)\end{tiny}
+	\item[] Артём Рудой\begin{tiny} (201-211 гр.)\end{tiny} %artemrudoj
 	\item[] Сергей Рудаков\begin{tiny} (201-219 гр.)\end{tiny} %Shytnichok
 
 	\item[] Вадим Сафронов\begin{tiny} (201-112 гр.)\end{tiny}
