--- a/unicity_distance.tex
+++ b/unicity_distance.tex
@@ -31,7 +31,7 @@
 \begin{itemize}
     \item Криптограф всегда стремится спроектировать систему таким образом, чтобы символы шифрованного текста имели равномерное распределение и, следовательно, энтропия шифртекста\index{энтропия!шифртекста} имела максимальное значение:
             \[ H(C_1 C_2 \dots C_n) \approx n \log_2 L, ~ n = 1, 2, \dots, N. \]
-    \item Имеет место соотношение
+    \item Имеет место соотношение:
             \[ H(C | K) = H(C_1 C_2 \dots C_N | K)  =  H(M), \]
         которое следует из цепочки равенств:
             \[ H(MCK) = H(M) + H(K | M) + H(C | MK) = H(M) + H(K), \]
