Add @Vsevolod-Livinskij nickname to foreword

--- a/foreword.tex
+++ b/foreword.tex
@@ -79,7 +79,7 @@
 	\item[] Егор Кузнецов\begin{tiny} (201-211 гр.)\end{tiny}
 	\item[] Зулкаид Курбанов\begin{tiny} (201-113 гр.)\end{tiny}
 
-	\item[] Всеволод Ливинский\begin{tiny} (201-216 гр.)\end{tiny}
+	\item[] Всеволод Ливинский\begin{tiny} (201-216 гр.)\end{tiny} %Vsevolod-Livinskij
 	\item[] Артемий Лузянин\begin{tiny} (201-312 гр.)\end{tiny} %artemluzyanin
 
 	\item[] Егор Макарычев\begin{tiny} (201-115 гр.)\end{tiny}
