Update needham-schroeder_protocol.tex - добавлено Н в "довереного центра"
ДовереННый центр, с двумя "н"

--- a/needham-schroeder_protocol.tex
+++ b/needham-schroeder_protocol.tex
@@ -6,7 +6,7 @@
 \begin{figure}[!htb]
     \centering
     \includegraphics[width=0.5\textwidth]{pic/key_distribution-needham-schroeder}
-    \caption{Схема взаимодействия абонентов и довереного центра в протоколе Нидхема~---~Шрёдера\label{fig:key_distribution-needham-schroeder}}
+    \caption{Схема взаимодействия абонентов и доверенного центра в протоколе Нидхема~---~Шрёдера\label{fig:key_distribution-needham-schroeder}}
 \end{figure}
 
 \begin{enumerate}
