Update perfect_secure_systems.tex - замена скобок на тире
"Криптоаналитиком" в данном случае является уточнением предыдущего дополнения (как члена предложения с т.ч. языка), поэтому правильнее в данном случае использовать тире вместо скобок.

--- a/perfect_secure_systems.tex
+++ b/perfect_secure_systems.tex
@@ -5,7 +5,7 @@
 
 	\[c = E_{K_1}\left(m\right).\]
 
-Шифртекст $c$ передаётся по открытому каналу легальному пользователю Бобу, причём по пути он может быть перехвачен нелегальным пользователем (криптоаналитиком) Евой.
+Шифртекст $c$ передаётся по открытому каналу легальному пользователю Бобу, причём по пути он может быть перехвачен нелегальным пользователем -- криптоаналитиком -- Евой.
 
 Боб, обладая ключом расшифрования $K_2$, расшифровывает сообщение с использованием функции расшифрования:
 	\[m' = D_{K_2}\left(c \right).\]
