Update blockchain.tex - пропущена запятая
Сложное предложение, после закрывающейся скобки запятая ставится.

--- a/blockchain.tex
+++ b/blockchain.tex
@@ -1,7 +1,7 @@
 \section{Blockchain (цепочка блоков)}\label{section-blockchain}\index{Blockchain|(}
 \selectlanguage{russian}
 
-Когда у вас есть знания о том, что такое криптографически стойкая хэш-функция, понять, что такое цепочка блоков (\langen{blockchain}) очень просто. Blockchain -- это последовательный набор блоков (или же, в более общем случае, ориентированный граф), каждый следующий блок в котором включает в качестве хэшируемой информации значение хэш-функции от предыдущего блока.
+Когда у вас есть знания о том, что такое криптографически стойкая хэш-функция, понять, что такое цепочка блоков (\langen{blockchain}), очень просто. Blockchain -- это последовательный набор блоков (или же, в более общем случае, ориентированный граф), каждый следующий блок в котором включает в качестве хэшируемой информации значение хэш-функции от предыдущего блока.
 
 Технология blockchain используется для организации журналов транзакций, при этом под транзакцией может пониматься что угодно: финансовая транзакция (перевод между счетами), аудит событий аутентификации и авторизации, записи о выполненных ТО и ТУ автомобилей. При этом событие считается случившимся, если запись о нём включена в журнал.
 
