Update blockchain.tex по новому, добавлен дефис
Правильное написание "по-новому".

--- a/blockchain.tex
+++ b/blockchain.tex
@@ -99,7 +99,7 @@
 Кроме концепции <<доказательство работы>> используются и другие. Например, в подходе <<доказательство доли владения>> (\langen{proof of share, PoS}), который планировалось использовать в сетях Etherium и EmerCoin, вероятность генерации блока пропорциональна количеству средств на счетах потенциальных создателей нового блока. Это намного более энергоэффективно по сравнению с PoW, и, кроме того, связывает ответственность за надёжность и корректность генерации новых блоков с размером капитала (чем больше у нас средств, тем меньше мы хотим подвергать опасности систему). С другой стороны, это даёт дополнительную мотивацию концентрировать больше капитала в одних руках, что может привести к централизации системы.
 
 \subsection{Механизм внесения изменений в протокол}
-Любая система должна развиваться. Но у децентрализованных систем нельзя просто <<включить один рубильник>> и заставить участников системы работать по новому -- иначе систему нельзя назвать полностью децентрализованной. Механизмы и способы внесения изменений могут выглядеть на первый взгляд нетривиально. Например:
+Любая система должна развиваться. Но у децентрализованных систем нельзя просто <<включить один рубильник>> и заставить участников системы работать по-новому -- иначе систему нельзя назвать полностью децентрализованной. Механизмы и способы внесения изменений могут выглядеть на первый взгляд нетривиально. Например:
 
 \begin{enumerate}
 	\item апологеты системы предлагают изменения в правилах работы;
