--- a/Information Security.tex
+++ b/Information Security.tex
@@ -119,7 +119,7 @@
 \begin{enumerate}
     \item Свойство, которым обладает субъект. Например: биометрия, природные уникальные отличия (лицо, радужная оболочка глаз, папиллярные узоры, последовательность ДНК).
     \item Знание -- информация, которую знает субъект. Например: пароль, PIN (Personal Identification Number).
-    \item Владение -- вещь, которой обладает субъект. Например: электронная или магнитная карта, флеш-память.
+    \item Владение -- вещь, которой обладает субъект. Например: электронная или магнитная карта, флэш-память.
 %    \item Факторы присвоения. Например, номер машины, RFID-метка.
 \end{enumerate}
 
