Revert "довереНого --> доверенного"
This reverts commit 9c7b38e88e073135631b017b271fc95128e4a1ad.

--- a/wide-mouth_frog.tex
+++ b/wide-mouth_frog.tex
@@ -4,7 +4,7 @@
 \begin{figure}[!htb]
     \centering
     \includegraphics[width=0.5\textwidth]{pic/key_distribution-wide-mouth_frog}
-    \caption{Схема взаимодействия абонентов и доверенного центра в протоколе Wide-Mouth Frog\label{fig:key_distribution-wide-mouth_frog}}
+    \caption{Схема взаимодействия абонентов и довереного центра в протоколе Wide-Mouth Frog\label{fig:key_distribution-wide-mouth_frog}}
 \end{figure}
 
 \begin{enumerate}
