--- a/double_and_triple_ciphering.tex
+++ b/double_and_triple_ciphering.tex
@@ -40,7 +40,7 @@
 
 Можно заранее вычислить значения $E_{K_2}(M)$ для всех ключей и построить таблицу: индекс -- $E_{K_2}(M)$, значения поля -- набор ключей $K_2$, которые соответствуют этому значению. Атака для нахождения ключей требует времени
     \[ T = 2 \cdot 2^{56} T_E + 2^{56} T_{=} \approx 2^{57} T_E \]
-и памяти $M = 56 \cdot 2^{56} \approx 2^{62}$ бит $= 512$ PiB, учитывая прямой доступ по значению к возможным ключам. При нахождении соответствия берётся другая пара (открытый текст, шифртекст) и проверяется равенство для определения, являются ли ключи правильными или нет.
+и памяти $M = 56 \cdot 2^{56} \approx 2^{62}$ бит $= 512$ PiB, учитывая прямой доступ по значению к возможным ключам. При нахождении соответствия берётся другая пара (открытый текст, шифртекст), и проверяется равенство для определения, являются ли ключи правильными или нет.
 
 По отношению к CCA и CPA криптостойкость 2DES\index{шифр!2DES} эквивалентна обычному DES\index{шифр!DES} с использованием 26 GiB памяти.
 
