--- a/foreword.tex
+++ b/foreword.tex
@@ -71,7 +71,7 @@
 	\item[] Виталий Крепак\begin{tiny} (201-013 гр.)\end{tiny}
 	\item[] Егор Кривов\begin{tiny} (201-211 гр.)\end{tiny}
 	\item[] Александр Кротов\begin{tiny} (201-011 гр.)\end{tiny}
-	\item[] Ефим Крохин\begin{tiny} (201-217 гр.)\end{tiny}
+	\item[] Ефим Крохин\begin{tiny} (201-217 гр.)\end{tiny} %Yefim-Krokhin
 	\item[] Станислав Круглик\begin{tiny} (201-111 гр.)\end{tiny}
 	\item[] Павел Крюков\begin{tiny} (200-916 гр.)\end{tiny} %pavelkryukov
 	\item[] Аркадий Кудашов\begin{tiny} (201-317 гр.)\end{tiny} %ark85
