Per #4216 by @akrasavina

--- a/foreword.tex
+++ b/foreword.tex
@@ -66,7 +66,7 @@
 	\item[] Андрей Кочетыгов\begin{tiny} (201-111 гр.)\end{tiny} %anko1774
 	\item[] Сергей Кошечкин\begin{tiny} (201-213 гр.)\end{tiny}
 	\item[] Александр Кравцов\begin{tiny} (201-116 гр.)\end{tiny}
-	\item[] Анастасия Красавина\begin{tiny} (201-217 гр.)\end{tiny}
+	\item[] Анастасия Красавина\begin{tiny} (201-217 гр.)\end{tiny} %akrasavina
 	\item[] Татьяна Красавина\begin{tiny} (201-214 гр.)\end{tiny} %tkrasav
 	\item[] Виталий Крепак\begin{tiny} (201-013 гр.)\end{tiny}
 	\item[] Егор Кривов\begin{tiny} (201-211 гр.)\end{tiny}
