Per #4246 by @Sosnovik

--- a/foreword.tex
+++ b/foreword.tex
@@ -117,7 +117,7 @@
 	\item[] Иван Соколов\begin{tiny} (201-314 гр.)\end{tiny} %vansokol
 	\item[] Илья Соломатин\begin{tiny} (201-211 гр.)\end{tiny}
 	\item[] Игорь Сорокин\begin{tiny} (201-112 гр.)\end{tiny}
-	\item[] Вера Сосновик\begin{tiny} (201-214 гр.)\end{tiny}
+	\item[] Вера Сосновик\begin{tiny} (201-214 гр.)\end{tiny} %Sosnovik
 	\item[] Игорь Степанов\begin{tiny} (201-213 гр.)\end{tiny}
 	\item[] Мария Столяренко\begin{tiny} (201-214 гр.)\end{tiny}
 	\item[] Светлана Субботина\begin{tiny} (201-316 гр.)\end{tiny} %sonne122
