Per #4437 by @artemluzyanin

--- a/rsa.tex
+++ b/rsa.tex
@@ -173,7 +173,7 @@
     \[ r = y \oplus H_2(x), ~ m = x \oplus H_1(r). \]
 
 В модификации OAEP+ $x$ вычисляется как
-    \[ x = (m \oplus H_1(r)) \| H_3(m \| r). \]
+    \[ x = \left( m \oplus H_1 \left( r \right) \right) \Vert \left. H_3 \left( m \Vert r \right) \right. .\]
 
 В описанной выше схеме ЭП под $m$ понимается хэш открытого текста, вместо шифрования выполняется подписание, вместо расшифрования -- проверка подписи.
 
