--- a/stack_overflow.tex
+++ b/stack_overflow.tex
@@ -3,7 +3,7 @@
 
 В качестве примера переполнения буфера опишем самую распространённую атаку, направленную на исполнение кода злоумышленника.
 
-В 64-битовой x86-64 архитектуре основное пространство виртуальной памяти процесса из 16-ти эксабайтов ($2^{64}$ байтов) свободно, и только малая часть занята (выделена). Виртуальная память выделяется процессу операционной системой блоками по 4 кБ, называемыми страницами памяти. Выделенные страницы соответствуют страницам физической оперативной памяти или страницам файлов.
+В 64-битовой x86-64 архитектуре основное пространство виртуальной памяти процесса из 16-ти эксабайтов ($2^{64}$ байтов) свободно, и только малая часть занята (выделена). Виртуальная память выделяется процессу операционной системой блоками по 4 Кбайт, называемыми страницами памяти. Выделенные страницы соответствуют страницам физической оперативной памяти или страницам файлов.
 
 Пример выделенной виртуальной памяти процесса представлен в таблице~\ref{tab:virtual-memory}. Локальные переменные функций хранятся в области памяти, называемой стеком.
 
