Prevent line breaks in inline equations; inspired by #4564 by @alishnik

--- a/_settings.tex
+++ b/_settings.tex
@@ -200,5 +200,9 @@
 \newcolumntype{C}[1]{>{\centering\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
 \newcolumntype{R}[1]{>{\raggedleft\let\newline\\\arraybackslash\hspace{0pt}}m{#1}} 
 
+% Рекомендация для latex'а не разрывать inline-формулы
+\binoppenalty=9999
+\relpenalty=9999
+
 \begin{document}
 \selectlanguage{russian}
