--- a/vigeneres_cipher.tex
+++ b/vigeneres_cipher.tex
@@ -1,7 +1,7 @@
 \section{Шифр гаммирования Виженера}
 \selectlanguage{russian}
 
-Шифр, который известен под именем Виженера, впервые описал Джованни Баттиста Беллазо (\langit{Giovanni Battista Bellaso}) в своей книге <<La cifra del Sig. Giovan Battista Belaso>>.
+Шифр, который известен под именем Виженера, впервые описал Джованни Баттиста Беллазо (\langit{Giovanni Battista Bellaso}) в своей книге \foreignlanguage{italian}{``La cifra del Sig. Giovan Battista Belaso''}.
 
 Рассмотрим один из вариантов этого шифра. В самом простом случае квадратом \textbf{Виженера} называется таблица из циклически сдвинутых копий латинского алфавита, в котором буквы J и V исключены. Первая строка и первый столбец -- буквы латинского алфавита в их обычном порядке, кроме буквы W, которая стоит последней. В строках таблицы порядок букв сохраняется, за исключением циклических переносов. Представим эту таблицу.
 
