--- a/foreword.tex
+++ b/foreword.tex
@@ -35,7 +35,7 @@
 	\item[] Марат Гаджибутаев\begin{tiny} (201-018 гр.)\end{tiny}
 	\item[] Ильназ Гараев\begin{tiny} (201-113 гр.)\end{tiny}
 	\item[] Евгений Глушков\begin{tiny} (201-012 гр.)\end{tiny}
-	\item[] Иван Голованов\begin{tiny} (201-312 гр.)\end{tiny} %ivangolovanov
+	\item[] Иван Голованов\begin{tiny} (201-312 гр.)\end{tiny} %ivangolovanov; legendawes, legendawes1
 	\item[] Андрей Горбунов\begin{tiny} (201-116 гр.)\end{tiny} %goriand
 	\item[] Елена Гундрова\begin{tiny} (201-214 гр.)\end{tiny}
 	\item[] Алексей Гусаров\begin{tiny} (201-216 гр.)\end{tiny}
