--- a/hash-functions.tex
+++ b/hash-functions.tex
@@ -50,7 +50,7 @@
 
 Из требования на устойчивость к коллизиям, в частности, следует свойство (близости к) равномерности распределения хэш-значений.
 
-При произвольной длине последовательности $X$ длина хэш-функции $H(X)$ в российском стандарте ГОСТ Р 34.11-94 равна 256-ти символам, в американском стандарте SHA несколько различных значений длин: 160, 192, 256, 512 символов.
+При произвольной длине последовательности $X$ длина хэш-функции $H(X)$ в российском стандарте ГОСТ Р 34.11-94 равна 256 символам, в американском стандарте SHA несколько различных значений длин: 160, 192, 256, 512 символов.
 
 \input{GOST_R_34.11-94.tex}
 
