--- a/lucifer.tex
+++ b/lucifer.tex
@@ -21,7 +21,7 @@
 \begin{figure}[htb]
 	\centering
 	\includegraphics[width=0.8\textwidth]{pic/sp-network}
-  \caption{SP-сеть, состоящая из 4-х p-блоков и 3-х слоёв s-блоков, по 5 блоков в каждом слое}
+  \caption{SP-сеть, состоящая из 4 p-блоков и 3 слоёв s-блоков, по 5 блоков в каждом слое}
   \label{fig:sp-network}
 \end{figure}
 
