--- a/ipsec.tex
+++ b/ipsec.tex
@@ -131,7 +131,7 @@ IPsec определяет:
 
 Шифрование вложенных данных производится в режиме CBC алгоритмом AES на ключе $Ke'$ с псевдослучайным вектором инициализации IV, вставленным перед зашифрованными данными.
 
-Аутентификатор сообщения определяется как усечённое до 96-ти бит значение $\HMAC(Ka', m)$, вычисленное стандартным способом.
+Аутентификатор сообщения определяется как усечённое до 96 бит значение $\HMAC(Ka', m)$, вычисленное стандартным способом.
 
 На рис.~\ref{fig:ipsec-esp-modes} показано применение протокола в транспортном и туннельном режимах.
 
@@ -152,7 +152,7 @@ IPsec определяет:
 	\caption{Заголовок AH пакета\label{fig:ipsec-ah}}
 \end{figure}
 
-Аутентификатор сообщения определяется так же, как и в протоколе ESP -- усечённое до 96-ти бит значение $\HMAC(Ka', m)$, вычисленное стандартным способом.
+Аутентификатор сообщения определяется так же, как и в протоколе ESP -- усечённое до 96 бит значение $\HMAC(Ka', m)$, вычисленное стандартным способом.
 
 На рис.~\ref{fig:ipsec-ah-modes} показано применение протокола в транспортном и туннельном режимах.
 
