Per #4829 by @moryshka

--- a/foreword.tex
+++ b/foreword.tex
@@ -95,6 +95,7 @@
 	\item[] Дао Куанг Минь\begin{tiny} (201-116 гр.)\end{tiny}
 	\item[] Антон Митрохин\begin{tiny} (201-216 гр.)\end{tiny} %ncos
 	\item[] Надежда Мозолина\begin{tiny} (201-119 гр.)\end{tiny}
+	\item[] Дарья Мороз\begin{tiny} (201-318 гр.)\end{tiny} %moryshka
 
 	\item[] Хыу Чунг Нгуен\begin{tiny} (201-015 гр.)\end{tiny} %huutrung
 	\item[] Артём Никитин\begin{tiny} (201-012 гр.)\end{tiny}
