--- a/ECIES.tex
+++ b/ECIES.tex
@@ -26,7 +26,7 @@
 	\item С помощью метода генерации общего секрета KA Алиса вычисляет общий секрет $s$. В случае использования оригинального протокола Диффи~---~Хеллмана\index{протокол!Диффи~---~Хеллмана} общим секретом будет являться результат умножения закрытого ключа Алисы на открытый ключ Боба $s = p_a \times P_B$.
 	\item Используя полученный общий секрет $s$ и метод получения ключей из ключевой и дополнительной информации KDF, Алиса получает ключ шифрования $k_{ENC}$, а также ключ для вычисления имитовставки $k_{MAC}$.
 	\item С помощью симметричного алгоритма шифрования ENC Алиса шифрует открытое сообщение $m$ ключом $k_{ENC}$ и получает шифртекст $c$.
-	\item Взяв ключ $k_{MAC}$, зашифрованное сообщение $c$ и другие заранее обговорённые сторонами параметры, Алиса вычисляет тэг сообщения ($tag$) с помощью функции MAC.
+	\item Взяв ключ $k_{MAC}$, зашифрованное сообщение $c$ и другие заранее обговорённые сторонами параметры, Алиса вычисляет тэг сообщения (\langen{tag}) с помощью функции MAC.
 	\item Алиса отсылает Бобу $\{P_A, tag, c\}$.
 \end{enumerate}
 
