--- a/secret-sharing-shamirs.tex
+++ b/secret-sharing-shamirs.tex
@@ -6,7 +6,7 @@
 \begin{figure}[thb]
 	\centering
 	\includegraphics[width=0.5\textwidth]{pic/shamir}
-  \caption{Через две точки можно провести неограниченное число графиков, заданных полиномами степени 2. Чтобы выбрать из них единственный -- нужна третья точка. Данные графики приведены только для иллюстрации идеи -- в схеме Шамира используется конечное поле, полиномы над которым сложно представить на графике.}
+  \caption{Через две точки можно провести неограниченное число графиков, заданных полиномами степени 2. Для выбора единственного из них нужна третья точка. Данные графики приведены только для иллюстрации идеи -- в схеме Шамира используется конечное поле, полиномы над которым сложно представить на графике.}
   \label{fig:shamir}
 \end{figure}
 
