Вместить каждое имя и группу в одну строку (без разрывов)

--- a/foreword.tex
+++ b/foreword.tex
@@ -9,9 +9,10 @@
 \addcontentsline{toc}{section}{Благодарности}
 Авторы пособия благодарят студентов, аспирантов и сотрудников Московского физико-технического института (государственного университета), которые помогли с подготовкой, редактированием и поиском ошибок в тексте.
 
+\setlength{\columnsep}{0.5em}
 \begin{multicols}{2}
 \begin{small}
-\begin{itemize}[leftmargin=*]\itemsep1pt \parskip0pt \parsep0pt
+\begin{itemize}[leftmargin=0.5em]\itemsep1pt \parskip0pt \parsep0pt
 
 	\item[] Владимир Аверьянов\begin{tiny} (201-113 гр.)\end{tiny} %rfoofr
 
