Per #5045 by @agruslan

--- a/foreword.tex
+++ b/foreword.tex
@@ -15,6 +15,7 @@
 \begin{itemize}[leftmargin=0.5em]\itemsep1pt \parskip0pt \parsep0pt
 
 	\item[] Владимир Аверьянов\begin{tiny} (201-113 гр.)\end{tiny} %rfoofr
+	\item[] Руслан Агишев\begin{tiny} (201-314 гр.)\end{tiny} %agruslan
 
 	\item[] Алипаша Бабаев\begin{tiny} (201-311 гр.)\end{tiny} %alishnik
 	\item[] Татьяна Бакланова\begin{tiny} (201-211 гр.)\end{tiny}
